--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "consulfarma.club.site",
+  "name": "tcc.site",
   "private": true,
+  "homepage": "https://mlasa.github.io/tcc.site.github.io",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "start": "vite",
     "build": "tsc && vite build",
@@ -33,6 +36,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
