--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@phosphor-icons/react": "^2.0.8",
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -27,16 +28,19 @@
     "react-intl": "^6.3.2",
     "react-is": "16.8.0",
     "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.4"
   },
   "devDependencies": {
+    "@types/node": "^20.4.10",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^5.0.0",
+    "react-error-overlay": "6.0.9",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
