--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_REACT_APP_LOCAL_BACKEND_URL=http://localhost:5100
-VITE_REACT_APP_PROD_BACKEND_URL=http://localhost:5100
+VITE_REACT_APP_PROD_BACKEND_URL=https://dogpass-api.onrender.com/
