--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@phosphor-icons/react": "^2.0.8",
     "@popperjs/core": "^2.11.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "localforage": "^1.10.0",
@@ -27,8 +28,10 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.3.2",
     "react-is": "16.8.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.4"
