--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@phosphor-icons/react": "^2.0.8",
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.9.5",
